2016-09-17      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.3.5
        * anonymine_engine.py (hiscores): str.format can't handle empty
            field names before Python 2.7.

2016-09-10      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.3.4
        * cursescfg: Use reverse video for the flags to make them more
            distinguishable on monochrome terminals.
        * anonymine_engine.py (hiscores (add_entry)): Failed to set
            display_caption when the player didn't make it to highscores.
        * Makefile.static: Added distclean.

2016-09-07      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.3.3
        * anonymine_engine.py (hiscores (add_entry)): list.index does not
            return None, but raises ValueError. Plus various changes for
            the fix.

2016-08-27      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.3.2
        * anonymine.py (ask): Do no more than 10 000 000 attempts on EINTR
            handling.

2016-08-22      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.3.1
        * anonymine_engine.py (hiscores, game_engine (play_game)):
            Added highscores for lost games.
        * anonymine_fields.py (generic_field (_call)): Check that won games
            really are won, any defect will automatically turn
            'win' into 'lose'.
        * anonymine.py (output): Do no more than 10 000 000 attempts.

2016-08-16      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.3.0
        * NEWS: Introduced 0.3
        * INSTALL: Warn of the removal of configuration files.
    0.2.32
        * anonymine.py (highscores_display), cursescfg: Use pseudo-tab-ish
            spacing between the columns and make horizontal scrolling in less
            faster.
            NOTICE: `highscores_display` now takes four arguments.

2016-08-15      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.2.31
        * anonymine.py: Set LESSSECURE=1
