@@ -1,7 +1,8 @@
 2016-09-17      Oskar Skog      <oskar.skog.finland@gmail.com>
     0.3.5
-        * anonymine_engine.py (hiscores): str.format can't handle empty
-            field names before Python 2.7.
+        * anonymine_engine.py (hiscores): Python 2.6 incompatibilities fixed:
+            - str.format can't handle empty field names ('{}')
+            - str.decode takes no keyword arguments
 
 2016-09-10      Oskar Skog      <oskar.skog.finland@gmail.com>
     0.3.4
